# mmar

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml  wqu_capstone.code-workspace
.dvc/: config
config/: main.yaml
docs/: Makefile  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  py-modindex.html  search.html  src.HurstIndexSolver.rst  src.MMAR.html  src.MMAR.rst  src.html  src.rst  tests.html  tests.rst
notebooks/: Initial_test_MMAR_class.ipynb  build_target_df.ipynb  cap1.ipynb  check_files.ipynb  check_mc_simulation.ipynb  check_mc_simulation_half_year.ipynb  check_mc_simulation_month.ipynb  check_mc_simulation_quarter.ipynb  check_mc_simulation_year.ipynb  check_scaling.ipynb  check_zhang.ipynb  compare_theta.ipynb  create_chain_df.ipynb  create_chain_dfs.ipynb  flow.md  initial_tests_mbm.ipynb  k_arm_bandit.ipynb  lgbm_predictions_200.ipynb  lgbm_predictions_350.ipynb  lgbm_predictions_500.ipynb  ml_build_multiclass_target.ipynb  ml_cb_compare copy.ipynb  ml_cb_compare.ipynb  ml_cb_compare_f1.ipynb  ml_cb_compare_f1_macro.ipynb  ml_cb_compare_f1_micro.ipynb  ml_cb_compare_ok_2023.ipynb  ml_cb_compare_precision.ipynb  ml_cb_compare_precision_micro.ipynb  ml_cb_compare_precision_weighted.ipynb  ml_cb_compare_recall.ipynb  ml_cb_compare_recall_macro.ipynb  ml_draft1.ipynb  ml_draft2.ipynb  ml_draft3.ipynb  ml_lgbm_compare_ok_199.ipynb  ml_lgbm_compare_ok_300.ipynb  ml_lgbm_compare_ok_400.ipynb  ml_log_reg_base.ipynb  ml_lr_compare.ipynb  (+21 more)
src/: basic_config.py  config.py  utility_functions.py
tests/: test_utilities.py
(+37 files in other folders)
