[tool.poetry]
name = "wqu_capstone"
version = "0.1.0"
description = ""
authors = ["Andrea Dalseno, Sanchit Jain, Vsevolod CherepanovS"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "3.11.6"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
scipy = "^1.11.4"
statsmodels = "^0.14.0"
numba = "^0.58.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
yfinance = "^0.2.33"
ipykernel = "^6.27.1"
dvc-s3 = "^2.23.0"
requests = "^2.31.0"
pywavelets = "^1.5.0"
stochastic = {path = "src/stochastic"}
python-dotenv = "^1.0.0"
ipywidgets = "^8.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
